# magskeeball

./: .gitattributes  .gitignore  conda_environment.yaml  paneltest.py  pyproject.toml  requirements.txt
font_src/: 4x6.bdf  FixedMedium6x12Medium.sfd
magskeeball/: __main__.py  attract.py  basic_skeeball.py  classic.py  combo.py  constants.py  cricket.py  debug.py  dummy.py  findserial.py  flash.py  game_menu.py  gameover.py  high_scores.py  intro.py  lightning.py  main.py  manager.py  panel.py  resources.py  sensor.py  service_menu.py  settings.py  settings_manager.py  speedrun.py  state.py  target.py  threek.py  timed.py  world.py
