[tool.poetry]
package-mode = false
name = "magskeeball"
version = "0.69.0"
description = ""
authors = ["CelestialQwert <celestialqwert@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"
pillow = "^10.2.0"
pyserial = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
